# DataAnalyzer

./: .dockerignore  .gitignore  Makefile  README.md  keywords.example.txt  pyproject.toml  settings.example.json
deploy/: Dockerfile.app-update  Dockerfile.gpu  Dockerfile.gpu.cuda  docker-compose.gpu.yml  docreview.service  server.env.example  settings.server.json
scripts/: run_windows.ps1  setup_windows.ps1
src/docreview/: __init__.py  cli.py  config.py  db.py  doctor.py  evidence.py  exporter.py  matching.py  models.py  ocr.py  parsers.py  platform_tools.py  server.py  service.py  web.py  xlsx_fallback.py
tools/: build_review_workbook.mjs  vision_ocr.m  word_to_pdf.ps1
